--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,10 @@
 version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
   build-and-test:
-    docker:
-      - image: circleci/node:12.16.0
+    executor:
+      name: node/default
     steps:
       - checkout
       - node/with-cache:
