--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: npm install
       - run:
           name: Unit test
-          command: npm test:unit
+          command: npm run test:unit
 workflows:
   build-and-test:
     jobs:
