Update docker tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,5 @@ workflows:
             - build-and-test
           context: docker-hub
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-          tag: "latest, ${CIRCLE_SHA1:0:7}"
+          tag: latest, ${CIRCLE_SHA1:0:7}
           use-docker-credentials-store: true
