Add docker image to verify-vars task

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
           name: Unit test
           command: npm run test:unit
   verify-vars:
+    docker:
+      - image: circleci/node:12.16.0
     steps:
       - run:
           name: check var
@@ -47,6 +49,6 @@ workflows:
           #   - build-and-test
           context: docker-hub
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-          tag: "latest, $(${CIRCLE_SHA1:0:7})"
+          tag: "latest, $(echo ${CIRCLE_SHA1:0:7})"
           # tag: latest
           use-docker-credentials-store: true
