--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ workflows:
           filters:
             filters:
               tags:
-                only: /^[0-9]*\.[0-9]*\.[0-9]*/
+                only: /^([0-9.]*){3}/
       - docker/publish:
           filters:
             tags:
-              only: /^[0-9]*\.[0-9]*\.[0-9]*/
+              only: /^([0-9.]*){3}/
           requires:
             - build-and-test
           context: docker-hub
