--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - run:
           name: Unit test
           command: npm run test:unit
+      - run:
+          name: Integration test
+          command: npm run test:integration
 
 workflows:
   build-and-test:
